--- a/css/style.css
+++ b/css/style.css
@@ -728,6 +728,19 @@ a:hover {
 	margin: 8px 0 0;
 	outline: none;
 }
+.domainbox .domainlt .dropdown {
+	float: left;
+	height: 45px;
+	width: 91px;
+	padding: 7px;
+	line-height: 47px;
+	outline: none;
+	border-radius: 5px;
+	margin: 0 10px 0 0;
+	font-size: 20px;
+	border: 1px solid #b5bcbd;
+	box-shadow: 3px 3px 3px #f2f2f2 inset;
+}
 .domainbox .domainlt .field3 {
 	float: left;
 	width: 60px;
