--- a/css/style.css
+++ b/css/style.css
@@ -731,11 +731,12 @@ a:hover {
 .domainbox .domainlt .dropdown {
 	float: left;
 	height: 45px;
+	width: 108px;
 	padding: 7px;
 	line-height: 47px;
 	outline: none;
 	border-radius: 5px;
-	margin: 0 10px 0 0;
+	margin: 0 8px 0 0;
 	font-size: 20px;
 	border: 1px solid #b5bcbd;
 	box-shadow: 3px 3px 3px #f2f2f2 inset;
