--- a/css/style.css
+++ b/css/style.css
@@ -692,6 +692,7 @@ a:hover {
 	color: #232323;
 	font-family: 'Titillium Web', sans-serif;
 	line-height: 20px;
+	font-weight: bold;
 }
 .domainbox .domainlt .field1 {
 	float: left;
@@ -740,6 +741,24 @@ a:hover {
 	font-size: 20px;
 	border: 1px solid #b5bcbd;
 	box-shadow: 3px 3px 3px #f2f2f2 inset;
+}
+.domainbox .domainlt .submit {
+	float: left;
+	width: 58px;
+	height: 47px;
+	border-radius: 5px;
+	background: none repeat scroll 0% 0% rgb(191, 0, 0);
+	text-align: center;
+	line-height: 47px;
+	color: rgb(255, 255, 255);
+	font-size: 20px;
+	border: medium none;
+	outline: medium none;
+	padding: 0px;
+	cursor: pointer;
+	text-shadow: 1px 1px 0px rgb(143, 0, 0);
+	box-shadow: 0px 2px 3px rgb(110, 110, 110);
+	font-family: 'Titillium Web',sans-serif;
 }
 .domainbox .domainlt .field3 {
 	float: left;
