--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 @import url(http://fonts.googleapis.com/css?family=Titillium+Web);
-
 @font-face {
 	font-family: 'Conv_MyriadPro-BoldSemiCn_0';
 	src: url('../fonts/MyriadPro-BoldSemiCn_0.eot');
@@ -257,11 +256,11 @@ a:hover {
 	margin: -140px 0 0 822px;
 	background: url(../images/banner_tag.png) no-repeat left top;
 }
-.banner .banner_btns{
+.banner .banner_btns {
 	width:335px;
 	margin:3px auto 0;
 }
-.banner .banner_btns .greybtn{
+.banner .banner_btns .greybtn {
 	float:left;
 	margin:0 0 0 10px;
 }
@@ -758,7 +757,7 @@ a:hover {
 	cursor: pointer;
 	text-shadow: 1px 1px 0px rgb(143, 0, 0);
 	box-shadow: 0px 2px 3px rgb(110, 110, 110);
-	font-family: 'Titillium Web',sans-serif;
+	font-family: 'Titillium Web', sans-serif;
 }
 .domainbox .domainlt .field3 {
 	float: left;
@@ -1333,6 +1332,7 @@ a:hover {
 }
 .accordianbox .txtinner {
 	float: left;
+	width:948px;
 	background: #fff;
 	border-left: 1px solid #9e9e9e;
 	border-right: 1px solid #9e9e9e;
@@ -2697,6 +2697,171 @@ a:hover {
 .contact_box .field_3:hover {
 	opacity: 0.9;
 }
+/***********SPECIAL OFFER*********/
+.special_offerbox{
+	float:left;
+	width:900px;
+	padding:20px 50px;
+	text-align:center;
+}
+.special_offerbox h3{
+	line-height:30px;
+	font-size:30px;
+	margin:0 0 10px;
+	padding:15px 0 5px;
+	color:#353535;
+	text-align:center;
+	text-transform:uppercase;
+	border-bottom:1px solid #ccc;
+	font-family: 'Titillium Web',sans-serif;
+}
+.domain_offer{
+	float:left;
+	width:219px;
+	padding:0px 40px 0;
+	margin:20px 0;
+	border-right:1px solid #ccc;
+}
+.domain_offer h4{
+	line-height:30px;
+	font-size:30px;
+	margin:0 0 8px;
+	padding:0 0 3px;
+	color:##353535;
+	text-align:center;
+	border-bottom:2px solid #ccc;
+	font-family: 'Titillium Web',sans-serif;
+}
+.domain_offer .old_rate{
+	float:left;
+	width:100%;
+	line-height:20px;
+	font-size:20px;
+	margin:0 0 5px;
+	text-decoration:line-through;
+	background: url(../images/at_the_rate.png) no-repeat 30% 3px;
+}
+.domain_offer .new_rate{
+	float:left;
+	width:100%;
+	line-height:28px;
+	font-size:28px;
+	margin:0 0 5px;
+	color:#89BC1D;
+	padding:0 0 5px;
+	border-bottom:2px solid #ccc;
+}
+.domain_offer .style1{
+	display:block;
+	line-height:12px;
+	font-size:12px;
+	color:#777;
+	text-transform:uppercase;
+}
+.domain_offer .redbtn{
+	margin:0 auto;
+	width:106px;
+}
+.shared_offer{
+	float:left;
+	width:100%;
+	text-align:center;
+	line-height:22px;
+	font-size:22px;
+}
+.shared_offer .numeric1{
+	color:#89BC1D;
+}
+.shared_offer .numeric2{
+	line-height:32px;
+	font-size:32px;
+	font-weight:bold;
+}
+.shared_offer .numeric3{
+	line-height:48px;
+	font-size:40px;
+	font-weight:bold;
+	color:#89BC1D;
+}
+.shared_offer:last-child{
+    margin: 10px 0 0;
+    padding: 10px 0;
+	background: none repeat scroll 0 0 #D9D9D9;
+}
+.countdown_box{
+	float:left;
+	width:100%;
+	margin:30px 0 0;
+	padding:0 0 30px;
+	border-bottom:1px solid #ccc;
+}
+.countdown_box ul {
+	float:left;
+	width:100%;
+	text-align:center;
+	display:block;
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+.countdown_box ul li {
+	display:inline-block;
+	width: 60px;
+	height: 50px;
+	background: #ccc;
+	margin: 0 0 0 10px;
+	border-radius: 5px;
+	border: 1px solid;
+	text-align: center;
+	line-height: 16px;
+	font-size: 14px;
+	color: #333;
+	padding:10px 0 0;
+	border-color: #3c5911 #abc582 #abc582 #3c5911;
+	box-shadow: 1px 1px 1px #dddedf, 1px 1px 1px #dddedf inset;
+	overflow: hidden;
+}
+.countdown_box ul li span .style1 {
+	display: block;
+	line-height: 28px;
+	font-size: 28px;
+	color: #fff;
+	text-shadow: 1px 1px 1px #4b6e15;
+}
+.countdown_box ul li span .style2 {
+	display:inline-block;
+	margin: 0 0 4px;
+	line-height: 30px;
+	font-size: 30px;
+	color: #333;
+	font-weight: bold;
+	font-family:Arial, Helvetica, sans-serif;
+}
+.position {
+	display: inline-block;
+	height: 1.0em;
+	overflow: hidden;
+	position: relative;
+	width: 0.7em;
+}
+.digit {
+	position: absolute;
+	display: block;
+	width: 0.7em;
+	letter-spacing: -1px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 /***********SPECIAL COLORS*********/
 .green {
 	color: #84ad2d;
@@ -2724,4 +2889,12 @@ a:hover {
 	float: left;
 	width: 100%;
 	margin: 0 0 24px;
+}
+.spacer2{
+	float: left;
+	width: 100%;
+	margin: 0 0 40px;
+}
+.noborder{
+	border-right:none;
 }
